--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "timeago-react": "^3.0.5",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
